openshift/deploy/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: pg
      port: 5432
      targetPort: pg
  type: ClusterIP
