openshift/deploy/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: chacra
  labels: { app: chacra, tier: mq }
spec:
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: http
      port: 15672
      targetPort: 15672
  selector: { app: chacra, tier: mq }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: chacra
  labels: { app: chacra, tier: mq }
spec:
  replicas: 1
  selector:
    matchLabels: { app: chacra, tier: mq }
  template:
    metadata:
      labels: { app: chacra, tier: mq }
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits:   { cpu: 500m, memory: 512Mi }
