openshift/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chacra
  namespace: chacra
  labels: { app: chacra }
spec:
  selector: { app: chacra, tier: api }
  ports:
    - name: http
      port: 80
      targetPort: 8000
