openshift/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chacra
  namespace: chacra
  labels: { app: chacra }
spec:
  to:
    kind: Service
    name: chacra
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  # host: chacra.<your-apps-domain>   # optional
